test/semantic_error/se_rt_nvoid.c0
void func() {
    return 1;
}

